# cuSBF

./: .clang-format  .gitignore  Doxyfile  README.md  flake.nix  meson.build  meson.options
.cargo/: config.toml
benchmarks/: benchmark_common.cuh  cpu_filter_comparison.cu  cusbf_host_overhead.cu  dense_packed_throughput.cu  fastx_workload.hpp  filter_comparison.cu  fpr_fastx_sweep.cu  gpu_filter_comparison.cu  gpu_filter_gqf_tcf.cuh  meson.build  param_sweep.cu  profiler_benchmark.cu
examples/: main.cu  meson.build
include/bloom/: Alphabet.cuh  BloomFilter.cuh
include/cusbf/: Alphabet.cuh  BloomFilter.cuh  Fastx.hpp  config.cuh  cuda_error.hpp  dense_packed.hpp  device_span.cuh  error.hpp  filter.cuh  filter_ref.cuh  gzstreambuf.hpp  hashutil.cuh  helpers.cuh  normalized_record_batch.hpp  superbloom_ffi.hpp
include/cusbf/detail/: chunk_stream_pair.cuh  count_positive_kmers.cuh  dense_packed.cuh  fastx_buffer_reader.hpp  fastx_chunk.cuh  fastx_dense_batch.hpp  fastx_dispatch.hpp  fastx_file_buffer.hpp  fastx_host_limits.cuh  fastx_host_memory.cuh  fastx_pinned_buffer.hpp  fastx_pipeline_core.cuh  fastx_pipeline_state.cuh  filter_common.cuh  filter_impl.cuh  host_parse.hpp  kernels.cuh  query_layout.cuh  record_math.cuh  sequence_kmer.cuh
scripts/: compare_filters.py  ncu_profiler.py  plot_cusbf_host_overhead.py  plot_dense_packed.py  plot_fpr.py  plot_fpr_fastx.py  plot_fpr_fastx_sweep.py  plot_gpu_vs_cpu.py  plot_param_sweep.py  plot_sol_benchmark.py  plot_utils.py  run-large-fastx-test.sh
subprojects/: cuco.wrap  gpu-filters.wrap
subprojects/packagefiles/gpu-filters/: meson.build
subprojects/packagefiles/gpu-filters/bulk-tcf/: meson.build  name-collision.patch  params.patch  reuse-scratch-buffers.patch
subprojects/packagefiles/gpu-filters/gqf/: fix-popcnt.patch  fix-qf-malloc-device.patch  fix-thrust-pair.patch  meson.build  rename-hash-functions.patch
subprojects/packagefiles/superbloom-cpu/: meson.build
tests/: large_fastx_util.hpp  meson.build  test_benchmark_common.cu  test_bloom_filter.cu  test_dense_record_batch.cpp  test_fastx.cu  test_fastx_chunk.cpp  test_fastx_dispatch.cpp  test_fastx_host_limits.cpp  test_large_fastx.cu  test_normalized_record_batch.cpp  test_query_layout.cpp  test_support.cuh
