option(
    'benchmarks',
    type: 'feature',
    value: 'auto',
    description: 'Build benchmarks for the library',
)

option(
    'tests',
    type: 'feature',
    value: 'auto',
    description: 'Build tests for the library',
)

option(
    'param_sweep',
    type: 'feature',
    value: 'disabled',
    description: 'Build param_sweep for the library',
)

option(
    'param_sweep_alphabet',
    type: 'combo',
    choices: ['dna', 'protein'],
    value: 'dna',
    description: 'Alphabet for param_sweep benchmarks (dna or protein)',
)

option(
    'examples',
    type: 'feature',
    value: 'auto',
    description: 'Build examples for the library',
)